prod page satisfaction text align fix / version

--- a/_campus_styles_alt.css
+++ b/_campus_styles_alt.css
@@ -330,7 +330,7 @@ div[data-filter-type="rangebox"] .qualifies {font-size:0.8em; margin:0 0 0 20px;
 .prodViewerAddToCartForm .numberInput {height:40px; border:1px inset #000000; text-align:center;}
 .productPage .addtocartbutton {height:50px; width:170px; color:#000000; font-size:2em; border-top:2px outset #fbe143; border-right:2px outset #000000; border-bottom:2px outset #000000; border-left:2px outset #fbe143; box-shadow:2px 2px 0 0 #cccccc; border-radius:0;}
 [data-order-soon='1'] {height:0; overflow:hidden;}
-.satisfactionGuarantee div[data-slide="toggle"] {display:none; padding:0 1em;}
+.satisfactionGuarantee div[data-slide="toggle"] {display:none; padding:0 1em; text-align:left;}
 .latency {width: 290px; margin:10px auto; color:#194835; font-size:1.2em; background-color:#eeeeee; border:2px solid #cccccc; box-shadow:2px 2px 0 0 #cccccc; padding:7px 0;}
 .latency .sprite, .satisfactionGuarantee .sprite {height:12px; width:16px; background-position:-351px -117px; display:inline-block;}
 .latency.open .sprite, .satisfactionGuarantee.open .sprite {background-position:-351px -131px;}
